--- a/css/main.css
+++ b/css/main.css
@@ -8,17 +8,19 @@ body {
 /* Container class for all panels, sitting between the header and footer */
 .panel-container {
   display: grid;
-  margin: 0px;
+  position: relative;
   grid-gap: 10px 20px;
-  width: 100vh;
+  left: 0;
+  right: 0;
+  width: 90vw;
   height: 90vh;
   grid-template-areas:
     "tlpanel midpanel trpanel"
     "blpanel midpanel brpanel";
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 50%);
-  justify-content: space-evenly;
-  margin: 0 3em;
+  justify-items: center;
+  margin: 0 auto;
 }
 
 /* Defines default text properties of the p and all header elements */
@@ -70,6 +72,7 @@ h1, h2, h3, h4, h5, h6 {
 /* A panel is considered a container on the web page hosting relative information such as
  * profile information, rss feed etc */
 .panel {
+  justify-self: center;
   display: grid;
   grid-template-rows: repeat(10, 1fr);
   grid-template-columns: repeat(10, 1fr);
