--- a/css/main.css
+++ b/css/main.css
@@ -12,12 +12,12 @@ body {
   grid-gap: 10px 20px;
   left: 0;
   right: 0;
-  width: 90vw;
+  width: 95vw;
   height: 90vh;
   grid-template-areas:
     "tlpanel midpanel trpanel"
     "blpanel midpanel brpanel";
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: 1fr 750px 1fr;
   grid-template-rows: repeat(2, 50%);
   justify-items: center;
   margin: 0 auto;
@@ -72,13 +72,13 @@ header nav {
 /* A panel is considered a container on the web page hosting relative information such as
  * profile information, rss feed etc */
 .panel {
-  justify-self: center;
   display: grid;
+  overflow: hidden;
   grid-template-rows: repeat(10, 1fr);
   grid-template-columns: repeat(10, 1fr);
   background-color: #141414;
   width: 500px;
-  max-width: 100%;
+  min-width: 50px;
   max-height: 100%;
   border: solid;
   border-color: #636363; 
