--- a/css/main.css
+++ b/css/main.css
@@ -3,24 +3,12 @@
 
 /* Defines properties of the body html element */
 body {
-}
-
-/* Container class for all panels, sitting between the header and footer */
-.panel-container {
-  display: grid;
-  position: relative;
-  grid-gap: 10px 20px;
-  left: 0;
-  right: 0;
-  width: 95vw;
-  height: 90vh;
-  grid-template-areas:
-    "tlpanel midpanel trpanel"
-    "blpanel midpanel brpanel";
-  grid-template-columns: 1fr 750px 1fr;
-  grid-template-rows: repeat(2, 50%);
-  justify-items: center;
-  margin: 0 auto;
+  margin: auto;
+  padding: 20px;
+  text-align: left;
+  width: 720px;
+  height: auto;
+  background-color:#222222;
 }
 
 /* Defines default text properties of the p and all header elements */
@@ -29,6 +17,10 @@ h1, h2, h3, h4, h5, h6 {
   font-family: Noto Sans, sans-serif;
   font-weight: bold;
   color: #ffffff;
+}
+
+h1 {
+  font-size: 44px;
 }
 
 /* Defines properties of the header nav with page links */
@@ -69,37 +61,34 @@ header nav {
   margin: auto 8%;
 }
 
+/* Class to contain our panel below the header */
+.panel-container {
+  display: flex;
+  width: 720px;
+  align-items: center;
+  justify-content: center;
+}
+
 /* A panel is considered a container on the web page hosting relative information such as
  * profile information, rss feed etc */
 .panel {
   display: grid;
-  overflow: hidden;
   grid-template-rows: repeat(10, 1fr);
   grid-template-columns: repeat(10, 1fr);
   background-color: #141414;
-  width: 500px;
-  min-width: 50px;
+  width: 625px;
   max-height: 100%;
   border: solid;
   border-color: #636363; 
   border-width: 3px;
-  border-radius: 40px; 
-}
-
-/* ID defining the child class for the top section of the info container within our top left panel */
-#top-info-container {
-  grid-template-columns: auto 1fr;
-  display: grid;
-  position: relative;
-  grid-row: 1 / span 3;
-  grid-column: 1 / span 9;
+  border-radius: 55px; 
 }
 
 /* ID defining the section within the top info container storing the profile picture */
 #profile-picture-section {
   position: relative;
-  grid-row-start: 1 / span 3;
-  grid-column-start: 1 / span 3;
+  grid-row: 1 / span 3;
+  grid-column: 1 / span 4;
   padding-left: 17px;
   padding-top: 12px;
 }
@@ -107,24 +96,25 @@ header nav {
 /* Defines the image property within the profile picture section */
 #profile-picture-section img {
   position: relative;
-  width: 125px;
-  height: 125px;
+  width: 180px;
+  height: 180px;
   border: solid;
   border-color: #636363; 
   border-width: 3px;
-  border-radius: 70px;
+  border-radius: 100px;
   object-fit: cover;
   padding: 1px;
 }
 
 /* ID defining section containing full name and other tags */
 #top-info-section {
-  grid-column: 4 / span 6;
+  grid-column: 4 / span 7;
   grid-row: 1 / span 3;
+  padding-left: 50px;
 }
 
 #top-info-section p {
-  font-size: 18px;
+  font-size: 16px;
 }
 
 #top-info-section h1 {
@@ -145,7 +135,7 @@ header nav {
   line-height: 0.2em;
   border: solid;
   border-radius: 7px;
-  padding: 3% 2% 3% 2%;
+  padding: 3% 2% 2% 2%;
   text-align: center;
   width: fit-content;
 }
