--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,9 @@ body {
   background-color:#222222;
 }
 
+/* TODO: Change the default font to be Roboto Mono and for Noto Sans to only override
+ * throughout the usage of the top section */
+
 /* Defines default text properties of the p and all header elements */
 p,
 h1, h2, h3, h4, h5, h6 {
@@ -121,6 +124,43 @@ header nav {
   margin-bottom: 0;
 }
 
+#side-info-section {
+  grid-column: 1 / span 5;
+  grid-row: 4 / span 3;
+  padding-left: 10px;
+  padding-top: 10px;
+}
+
+/*
+#side-info-section p {
+  font-family: 'RobotoMono', sans-serif;
+  font-weight: lighter;
+  font-size: 16px;
+}
+*/
+
+#terminal-icon {
+  display: inline-block;
+}
+
+#terminal-prompt {
+  font-family: 'RobotoMono', sans-serif;
+  font-weight: lighter;
+  font-size: 16px;
+  position: relative;
+  display: inline-block;
+  bottom: 10px;
+  left: 18px;
+}
+
+#vline {
+  display: inline-block;
+  position: relative;
+  border-left: 3px solid #5d3fd3;
+  height: 95px;
+  left: 15px;
+}
+
 /* Tag class defines a coloured and slightly rounded box resized to contain text.
  * Usually used for displaying one word (or phrase) references */
 .tag {
@@ -140,3 +180,22 @@ header nav {
   width: fit-content;
 }
 
+/* Quote class to store a multi layered quote -> similar design to tag */
+#side-info-section .quote {
+  display: inline-block;
+  position: relative;
+  font-family: Arial, sans-serif;
+  font-style: italic;
+  font-size: 12px;
+  background-color: #1b1b1b;
+  border-radius: 7px;
+  border: solid #2c2c2c;
+  height: fit-content;
+  border-radius: 10px;
+  padding: 1% 3% 1% 3%;
+}
+
+#side-info-section .quote p {
+  font-weight: normal;
+  color: #808080
+}
