--- a/css/main.css
+++ b/css/main.css
@@ -15,11 +15,12 @@ body {
  * throughout the usage of the top section */
 
 /* Defines default text properties of the p and all header elements */
-p,
+p, a,
 h1, h2, h3, h4, h5, h6 {
   font-family: Noto Sans, sans-serif;
   font-weight: bold;
   color: #ffffff;
+  text-decoration: none;
 }
 
 h1 {
@@ -131,13 +132,29 @@ header nav {
   padding-top: 10px;
 }
 
-/*
-#side-info-section p {
-  font-family: 'RobotoMono', sans-serif;
-  font-weight: lighter;
-  font-size: 16px;
+#contact-section {
+  grid-column: 5 / span 6;
+  grid-row: 6 / span 1;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-evenly;
 }
-*/
+
+#contact-section .contact-link a,
+#contact-section .contact-link p {
+ font-family: Noto Sans, sans-serif;
+ font-weight: normal;
+ font-size: 22px;
+}
+
+.contact-link {
+  display: flex;
+  position: relative;
+  bottom: 40px;
+  align-items: center;
+  margin-left: 20px;
+  gap: 8px;
+}
 
 #terminal-icon {
   display: inline-block;
